still trying to get spacing correct

--- a/css/home.css
+++ b/css/home.css
@@ -11,5 +11,5 @@ h1 {
 }
 .message{
   font-family:'Helvetica', 'Arial', 'Sans-Serif';
-  line-height: 150%;
+  line-height: 200%;
 }
